# mtservices

./: .dockerignore  .gitignore  Dockerfile.MetaTrader5  Dockerfile.mt5  INFO.md  Makefile  README.md  TODOS.md  TODOs.md  client_example.py  config.json  go.mod  go.sum  local.session.sql  main.go  requirements.txt  resources.md  server.py  socket-client.py
MT4/: Dockerfile.MetaTrader4  Dockerfile.mt4  Makefile  Makefile_mt4
MT5/: Dockerfile.MetaTrader5  Dockerfile.mt5  Dockerfile.mt5.pywindows  Makefile  Makefile_mt5  docker-compose.yml
MTAutoLoginService/: app_test.py  requirements.txt  setup.bat
MTWebService/: README.md  main.py  processor.py
application/: controllers.go  structures.go
assets/: Dockerfile.MetaTrader5  metatrader.desktop  supervisord.conf
clients/: MetaTraderTest.py  TODOs.md  wisefinanceMT-mql.py  ws_client.py
custom-nats-clients/: simple-client.c
data/: Step Index-D1.csv
dumps/: DUMP.md  README-2.md  TODOS-1.md  nats.mq5  old-wisefinance-sockets.mq5
ejTrader-mod/: ejtraderMT.mq5
go server/: config.json.example
mt-socket-server-rs/: Cargo.toml
resources/: example-socket-client.mq4  wf-server-22.mq5
scripts/: Dockerfile.mt5.openbox  Dockerfile.mt5.ubuntu  Dockerfile.ubuntu.main  Python_script_example_PyTrader.py  Pytrader_API_V3_01a.py  clean.sh  run.sh  (+12 more)
socket-server-rs/: Cargo.toml
socket-server-rs/client/Experts/: wisefinance-socket-client.mq5
socket-server-rs/resources/: server.py  wf-v1.mq5
socket-server-rs/resources/PyTrader-python-mt4-mt5-trading-api-connector-drag-n-drop-test/utils/api/: Pytrader_API_V3_01a.py
(+720 files in other folders)
