[package]
name = "socket-server-rs"
version = "0.1.0"
authors = ["Ojietohamen Samuel <seekersoftec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
